# game_ton

./: .gitignore  algo.py  api_connect.py  classes.py  data.json  example_response.json  field.py  gui.py  main.py  models.py  move.py  requrements.txt  snake_game.py
snake-game-api-client/: README.md  pyproject.toml
snake-game-api-client/snake_game_api_client/: __init__.py
snake-game-api-client/snake_game_api_client/api/default/: get_rounds_snake3d.py  post_play_snake3d_player_move.py
snake-game-api-client/snake_game_api_client/models/: __init__.py  enemy.py  enemy_status.py  food.py  game_rounds_response.py  game_state.py  round_.py  round_status.py  snake.py  snake_request.py  snake_request_snakes_item.py  snake_status.py  special_food.py
